# gnumake-tokenpool

./: package.json  pyproject.toml  readme.md  setup.cfg  shell.nix
.github/workflows/: cc-test.yml  ci-sage.yml  python-publish.yml
cc/: readme.md
cc/src/: CMakeLists.txt  tokenpool-gnu-make-posix.cc  tokenpool-gnu-make-posix.h  tokenpool-gnu-make-win32.cc  tokenpool-gnu-make.cc  tokenpool-gnu-make.h  tokenpool.h  tokenpool_test.cc
cc/test/: test.sh
cc/test/jobclient/: Makefile  jobclient  jobclient.cc  test.sh
js/: details.md  readme.md  shell.nix
js/src/: tokenpool.js
js/src/gnumake-tokenpool/: package.json  tokenpool.d.ts  tokenpool.js
js/test/: test.sh
js/test/jobclient/: test.mjs  test.sh
py/: default.nix  mypy.ini  readme.md  result
py/src/gnumake_tokenpool/: __init__.py  jobclient.py  read_byte.py  tokenpool.py
py/test/: test.sh
py/test/jobclient/: test.py  test.sh
sh/: details.md
sh/src/: tokenpool.sh
sh/test/: Makefile  test.sh  worker.sh
src/js/: JobClient.d.ts  JobClient.js  gnumake-jobclient.mjs  jobclient.d.ts  jobclient.js  package.json  readme.md
src/js/test/: Makefile  test.mjs  test.sh
src/py/: readme.md  shell.nix
src/py/gnumake_jobclient/: __init__.py  jobclient.py
src/py/test/: test.sh
src/py/test/jobclient/: Makefile  test.py
