[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gnumake_tokenpool"
authors = [{name = "Milan Hauth", email = "milahu@gmail.com"}]
description = "jobclient and jobserver for the GNU make tokenpool protocol"
keywords = ["jobclient", "jobserver", "gnumake", "tokenpool", "jobqueue", "job", "queue", "gnu", "make"]
readme = {file = 'readme.md', content-type='text/markdown'}
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/milahu/gnumake-tokenpool"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["py/src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "gnumake_tokenpool.tokenpool.__version__"}
