[metadata]
name = gnumake_jobclient
version = attr: py.src.gnumake_jobclient.jobclient.__version__
author = Milan Hauth
author_email = milahu@gmail.com
description = client for the GNU make jobserver
url = https://github.com/milahu/gnumake-jobclient-py
keywords = jobclient, gnumake, gnu, make, jobserver, client
license = MIT
classifiers =
  Programming Language :: Python :: 3
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Libraries
  License :: OSI Approved :: MIT License

[options]
packages = find:

[options.packages.find]
where=py/src
