[metadata]
name = gnumake_tokenpool
version = attr: py.src.gnumake_tokenpool.jobclient.__version__
author = Milan Hauth
author_email = milahu@gmail.com
description = jobclient and jobserver for the GNU make tokenpool protocol
url = https://github.com/milahu/gnumake-tokenpool
keywords = jobclient, jobserver, gnumake, tokenpool, jobqueue, job, queue, gnu, make
license = MIT
classifiers =
  Programming Language :: Python :: 3
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Libraries
  License :: OSI Approved :: MIT License

[options]
packages = find:

[options.packages.find]
where=py/src
